--- a/style.css
+++ b/style.css
@@ -1,1 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    background-color: hsl(0, 0%, 98%);
+    color: hsl(229, 6%, 66%);
+}
+
+.container {
+    max-width: 80rem; /* 1200 px*/
+    margin: 0 auto;
+    padding: 3.125rem 1.875rem;
+}
+
+header {
+    text-align: center;
+}
+
+header h2 {
+    font-size: 2.267rem;
+    font-weight: 200;
+    color: hsl(234, 12%, 34%);
+}
+
+header h3{
+    font-size: 2.267rem;
+    font-weight: 600;
+    color: hsl(234, 12%, 34%);
+}
+
+header p{
+    max-width: 37.5rem;
+    margin: 0 auto;
+}
+
+.main{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.667rem;
+    margin-top: 4rem;
+}
+
+.box {
+    background-color: white;
+    border-radius: 10px;
+    padding: 2rem;
+    text-align: right;
+    box-shadow: rgba(84, 158, 242, 0.2) 0px 18px 50px -10px;
+}
+
+.box-text{
+    text-align: left;
+    padding-bottom: 2.75rem;
+}
+
+.box1{
+    border-top: 5px solid hsl(180, 62%, 55%);
+}
+
+.box2{
+    border-top: 5px solid hsl(0, 78%, 62%);
+}
+
+.box3{
+    border-top: 5px solid  hsl(34, 97%, 64%);
+}
+
+.box4{
+    border-top: 5px solid hsl(212, 86%, 64%);
+}
+
+.box-text h5 {
+    font-size: 1.333rem;
+    color: hsl(234, 12%, 34%);
+    margin-top: 1rem;
+}
+
+.box-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.667rem;
+}
+
+.box1 , .box4 {
+    align-self: center;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .main{
+        grid-template-columns: 1fr;
+    }
+    
+}
+
+@media only screen and (max-width: 425px) {
+
+    body{
+        font-size: 13px;
+    }
+
+    header h2{
+        font-size: 1.538rem;
+    }
+
+    header h3{
+        font-size: 1.538rem;
+    }
+
+    .box{
+        padding:  1.538rem;
+    }
+
+    .box-text{
+        padding-bottom: 1.538rem;
+    }
+    
+}
